<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".BookTicket">


        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/payment_details"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/textView20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>


        <TextView

            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/you_are_paying_to_jayshree_with_the_amount_mentioned_below_for_any_problems_you_can_contact_customer_care"
            app:layout_constraintBottom_toTopOf="@+id/textView18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17"></TextView>

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/namee"
            android:text="@string/uday_chavan"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/upi_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/upi_id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/upi_id"
            android:text="@string/UPI"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/amount_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/amount_et"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="184dp"

            android:fontFamily="sans-serif-medium"
            android:text="@string/_1"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView21"
            app:layout_constraintTop_toBottomOf="@+id/upi_id" />

        <EditText
            android:id="@+id/note"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:fontFamily="sans-serif-medium"
            android:hint="@string/note"
            android:inputType="text"
            android:text="@string/book_ticket_from_dombivli_to_mumbai_7am"
            app:layout_constraintBottom_toTopOf="@+id/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount_et" />

        <Button
            android:id="@+id/send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="130dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="62dp"
            android:background="@color/colorPrimary"
            android:text="@string/pay_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/details"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/_1_click_on_paynow_and_select_the_payment_method"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/_2_Proceed_the_payment_through_selected_payment_method_after_successful_payment_you_will_be_provided_with_e_ticket"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="90dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/amount"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/note"
            app:layout_constraintEnd_toStartOf="@+id/amount_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>