<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:padding="20dp"
    >

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo"></ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:text="@string/travel_with_jayshree"
        android:textColor="#FFFF"
        android:textSize="30sp"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/www_jayshree_com"
        android:textColor="#FFFF"

        android:textSize="15sp"></TextView>

</LinearLayout>