<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forgotpassword">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/findemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="27dp"
        android:textColorHint="#050505"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:layout_constraintBottom_toTopOf="@+id/findaccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint= "@string/enter_your_number"

            android:inputType="phone"
            android:textColor="#000000" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/findaccount"
        android:layout_width="215dp"
        android:layout_height="53dp"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginEnd="98dp"
        android:layout_marginRight="98dp"
        android:layout_marginBottom="302dp"
        android:background="#9F9F9F"
        android:text="@string/find_your_account"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findemail" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="133dp"
        android:layout_height="107dp"
        android:layout_marginStart="139dp"
        android:layout_marginLeft="139dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="139dp"
        android:layout_marginRight="139dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/findemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>